--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vue-split-carousel": "^1.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
